# VectorX-agent

./: README.md
Backend/: requirements.txt  run.py
Backend/src/: config.py
Backend/src/app/: __init__.py  routes.py  utils.py
Backend/src/database/: __init__.py  db.py  db_utils.py
Backend/src/workflows/: immigration_workflow.py
DataSeeder/immiscraper/: README.md  pyproject.toml  requirements.txt
DataSeeder/immiscraper/src/immiscraper/: crew.py  main.py
